tests/invalid/SetSubset_Invalid_11.whiley
method main() -> void:
    assert {1, 4} ⊆ {1, 2, 3}
